# ocaml-uri

./: .gitignore  BUILD.bzl  Dockerfile  WORKSPACE.bazel  WORKSPACE.bzl  flake.nix  test.bash
bzl/: deps.bzl  deps_setup.bzl  library.bzl  opam.bzl  repositories.bzl  services.bzl
config/: BUILD.bazel
etc/: BUILD.bazel
lib/: BUILD.bazel
lib_re/: BUILD.bazel
lib_sexp/: BUILD.bazel
lib_test/: BUILD.bazel
