workspace(name = "uri")

local_repository(
    name = "obazl_rules_ocaml",
    path = "../../bazel/rules_ocaml",
)

load("//bzl:repositories.bzl", "uri_dependencies")
uri_dependencies()

load("@obazl_rules_ocaml//ocaml:repositories.bzl", "ocaml_dependencies")
ocaml_dependencies()

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//bzl:opam.bzl", "opam")

ocaml_configure(
    build = "4.12",
    opam = opam,
)
