load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ppx_module",
    "ocaml_test",
)

ocaml_module(
    name = "test_runner",
    struct = "test_runner.ml",
    deps_opam = ["oUnit"],
    deps = ["//lib:lib-uri", "//etc:services_short"],
)

ocaml_test(name = "test", main = "test_runner")

ppx_module(
    name = "test_runner_sexp",
    struct = "test_runner_sexp.ml",
    deps_opam = ["oUnit"],
    deps = ["//lib_sexp:lib-uri_sexp", "//lib:lib-uri", "//etc:services_short"],
)

ocaml_test(name = "test_sexp", main = "test_runner_sexp")
